# port-scanner-cli

./: .gitignore  README.md  port_scanner.py
file-profiler/: .gitignore  README.md  create_test_file.py  file_profiler.py  pyproject.toml
file-profiler/test_files/: dummy.elf  dummy.macho  test.txt
