[tool.poetry]
name = "file-profiler"
version = "0.1.0"
description = ""
authors = ["imyesung <limyesung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pefile = "^2024.8.26"
lief = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
